--- a/apps/web/src/layouts/MainLayout.astro
+++ b/apps/web/src/layouts/MainLayout.astro
@@ -35,7 +35,7 @@ import ServerHeader from '../components/server/Header.astro';
         } catch {}
       })()
     </script>
-    <ServerHeader />
+    <ServerHeader server:defer />
     <slot />
   </body>
   
